--- a/login.html
+++ b/login.html
@@ -17,14 +17,14 @@
 				<FORM action="" method="POST">
 					<DIV class="form-group">
 						<LABEL for="email">電子郵件</LABEL>
-						<INPUT type="email" class="form-control" id="email" name="email" required="required">
+						<INPUT type="email" class="form-control" id="email" name="email" required="required"/>
 					</DIV>
 					<DIV class="form-group">
 						<LABEL for="password">密碼</LABEL>
-						<INPUT type="password" class="form-control" id="password" name="password" required="required">
+						<INPUT type="password" class="form-control" id="password" name="password" required="required"/>
 					</DIV>
 					<DIV class="form-group">
-						<INPUT type="checkbox" id="rememberme" name="rememberme">
+						<INPUT type="checkbox" id="rememberme" name="rememberme"/>
 						<LABEL for="rememberme">記住我</LABEL>
 					</DIV>
 					<DIV>
