--- a/register.html
+++ b/register.html
@@ -17,15 +17,15 @@
 				<FORM action="" method="POST">
 					<DIV class="form-group">
 						<LABEL for="email">電子郵件</LABEL>
-						<INPUT type="email" class="form-control" id="email" name="email" required="required">
+						<INPUT type="email" class="form-control" id="email" name="email" required="required"/>
 					</DIV>
 					<DIV class="form-group">
 						<LABEL for="password">密碼</LABEL>
-						<INPUT type="password" class="form-control" id="password" name="password" required="required">
+						<INPUT type="password" class="form-control" id="password" name="password" required="required"/>
 					</DIV>
 					<DIV class="form-group">
 						<LABEL for="nikeName">暱稱</LABEL>
-						<INPUT type="text" class="form-control" id="nikename" name="nikename" required="required">
+						<INPUT type="text" class="form-control" id="nikename" name="nikename" required="required"/>
 					</DIV>
 					<DIV>
 						<BUTTON type="submit" class="btn btn-success">確定</BUTTON>
