--- a/emailHTML.html
+++ b/emailHTML.html
@@ -8,7 +8,7 @@
 <BODY>
 <DIV style="margin: 0 auto; max-width: 550px; font-size: 14px;">
 	<IMG src="https://static.ilearnedlearned.com/logo.png" style="background-color: #0027B7; width: 180px; height: 60px;" alt="ilearnedlearned">
-	<P style="font-size: 12px; text-align: right; color: red;">！此信件透過學到後臺系統發送，請勿直接回覆</P>
+	<P style="font-size: 12px; text-align: right; color: red; margin: 0;">！此信件透過學到後臺系統發送，請勿直接回覆</P>
 	<DIV style="display: block; height: 3px; width: 100%; background-color: #34a8eb; margin: 3px 0;"></DIV>
 	<DIV style="padding: 10px; background-color: #eee;">
 		<DIV style="background-color: #FFF; padding: 10px; line-height: 2;">
