--- a/emailHTML.html
+++ b/emailHTML.html
@@ -5,23 +5,29 @@
 	<META http-equiv="X-UA-Compatible" content="ie=edge">
 	<TITLE>Document</TITLE>
 </HEAD>
-<BODY>
-<DIV style="margin: 0 auto; max-width: 550px; font-size: 14px;">
-	<IMG src="https://static.ilearnedlearned.com/logo.png" style="background-color: #0027B7; width: 180px; height: 60px;" alt="ilearnedlearned">
-	<P style="font-size: 12px; text-align: right; color: red; margin: 0;">！此信件透過學到後臺系統發送，請勿直接回覆</P>
-	<DIV style="display: block; height: 3px; width: 100%; background-color: #34a8eb; margin: 3px 0;"></DIV>
-	<DIV style="padding: 10px; background-color: #eee;">
-		<DIV style="background-color: #FFF; padding: 10px; line-height: 2;">
-			<P style="margin-bottom: 30px;">親愛的會員，您好：</P>
-			<P>系統已寄送認證信給您，請於7天內點選下列連結，完成信箱驗證：</P>
-			<A href="">https://ilearnedlearned.com/</A>
-			<P>(若您按下連結後沒有反應，請複製連結貼至網址列。)</P>
-			<P style="margin-bottom: 40px;">如有任何疑問，歡迎您前往 <A href="">幫助中心</A> 查看說明，或使用 <A href="">留言詢問</A> 做聯繫。<BR/>學到感謝您的支持！</P>
-			<P style="padding: 10px; background-color: #f0e8a1; color: #d69b20; margin-bottom: 5px; border: 1px solid #ddd;">※ 提醒您：信箱認證後，即完成修改認證信箱程序，您可登入學到使用服務。<BR/>若您並未修改認證信箱，請忽略這封信件。</P>
-		</DIV>
+<BODY style="background-color: #105EFB">
+<DIV style="margin: 0 auto; max-width: 550px;">
+	<IMG src="./images/emailBanner.png" style="width: 100%; height: auto; margin-bottom: 5px;" alt="">
+	<DIV style="background-color: #FFF; padding: 40px 50px; color: #696974; border-bottom: 7px solid #E3E3E5;">
+		<P style="margin: 0px; font-size: 30px; color: #105EFB;">學到<SPAN style="padding-left: 10px;letter-spacing: 2px;">ILEARNED</SPAN></P>
+		<P style="margin: 0px 0px 30px; font-size: 46px; font-weight: bold; color: #105EFB;">歡迎您的加入!!</P>
+		<P style="font-size: 20px; font-weight: bold;">Dear</P>
+		<P>歡迎你加入我們，現在就開始你的第一堂課程吧!</P>
+		<P style="line-height: 1.8;">學到擁有多樣化的線上課程選擇，<BR/>
+			從職場管理、商業銷售到親子溝通、個人成長無一不備，<BR/>
+			更與擁有10幾年經驗的課程規劃師合作，<BR/>
+			透過說書、影片、動畫、逐字稿，使學習變得更活潑，<BR/>
+			不限時間地點，讓你輕鬆走到哪、學到哪。
+		</P>
+		<P style="margin-bottom: 5px;">若需要詳細說明可點擊「<A href="">了解更多</A>」。</P>
+		<P style="margin-bottom: 70px; margin-top: 0;">預祝您學習愉快，讓我們一起成為更好的自己!</P>
+		<A href="" style="display: block; width: 100%; text-decoration: none; padding: 5px; background-color: #696974; font-size: 22px; color: #FFF; text-align: center; border-radius: 10px; box-shadow: -3px -3px 0px 0px #105EFB;">帳號驗證</A>
 	</DIV>
-	<DIV style="display: block; height: 3px; width: 100%; background-color: #34a8eb; margin: 3px 0;"></DIV>
-	<P style="text-align: center;">若有任何問題，請聯絡學到客服</P>
+	<DIV style="padding: 30px 50px; color: #FFF; text-align: center;">
+		<DIV style="margin-right: 30px; display: inline-block;"><IMG src="./images/emailIconEmail.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></DIV>
+		<DIV style="margin-right: 30px; display: inline-block;"><IMG src="./images/emailIconLink.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">ILEARNED 官網</SPAN></DIV>
+		<DIV style="display: inline-block;"><IMG src="./images/emailIconFB.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">FB 粉絲團</SPAN></DIV>
+	</DIV>
 </DIV>
 </BODY>
 </HTML>
