--- a/forgetPasswordHTML.html
+++ b/forgetPasswordHTML.html
@@ -12,16 +12,15 @@
 		<P style="margin: 0px; font-size: 30px; color: #105EFB;">學到<SPAN style="padding-left: 10px;letter-spacing: 2px;">ILEARNED</SPAN></P>
 		<P style="margin: 0px 0px 30px; font-size: 46px; font-weight: bold; color: #105EFB;">歡迎您的加入!!</P>
 		<P style="font-size: 20px; font-weight: bold;">Dear</P>
-		<P>歡迎你加入我們，現在就開始你的第一堂課程吧!</P>
-		<P style="line-height: 1.8;">學到擁有多樣化的線上課程選擇，<BR/>
-			從職場管理、商業銷售到親子溝通、個人成長無一不備，<BR/>
-			更與擁有 10 幾年經驗的課程規劃師合作，<BR/>
-			透過說書、影片、動畫、逐字稿，使學習變得更活潑，<BR/>
-			不限時間地點，讓你輕鬆走到哪、學到哪。
+		<P style="line-height: 1.8;">學到<SPAN style="padding: 0 5px; letter-spacing: 1px;">ILEARNED</SPAN>已收到你忘記會員密碼的申請，<BR/>請輸入以下預設密碼，登入後進行密碼變更。</P>
+		<DIV style="width: 130px; text-align: center; padding: 7px; background-color: #E3E3E5; color: #696974;">QPaBW</DIV>
+		<P style="line-height: 1.8;">為了確保會員資料安全，請盡快完成會員密碼的更改，<BR/>
+			若你未申請查詢，可能是其他人嘗試使用你的帳號，<BR/>
+			請立即點選下方「登入」按鈕進行密碼變更，<BR/>
+			以確保帳號使用的安全。
 		</P>
-		<P style="margin-bottom: 5px;">若需要詳細說明可點擊「<A href="https://ilearned-qa.herokuapp.com/" target="_blank">瞭解更多</A>」。</P>
-		<P style="margin-bottom: 70px; margin-top: 0;">預祝您學習愉快，讓我們一起成為更好的自己!</P>
-		<A href="" style="display: block; width: 100%; text-decoration: none; padding: 5px; background-color: #696974; font-size: 22px; color: #FFF; text-align: center; border-radius: 10px; box-shadow: -3px -3px 0px 0px #105EFB; font-weight: 600;">帳號驗證</A>
+		<P style="margin-bottom: 60px;">學到<SPAN style="padding: 0 10px 0 5px; letter-spacing: 1px;">ILEARNED</SPAN>敬上</P>
+		<A href="https://ilearned-qa.herokuapp.com/" style="display: block; width: 100%; text-decoration: none; padding: 5px; background-color: #696974; font-size: 22px; color: #FFF; text-align: center; border-radius: 10px; box-shadow: -3px -3px 0px 0px #105EFB; font-weight: 600;">登入</A>
 	</DIV>
 	<DIV style="padding: 30px 50px; color: #FFF; text-align: center;">
 		<DIV style="margin-right: 30px; display: inline-block;"><IMG src="./images/emailIconEmail.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></DIV>
