--- a/forgetPasswordHTML.html
+++ b/forgetPasswordHTML.html
@@ -22,10 +22,10 @@
 		<P style="margin-bottom: 60px;">學到<SPAN style="padding: 0 10px 0 5px; letter-spacing: 1px;">ILEARNED</SPAN>敬上</P>
 		<A href="https://ilearned-qa.herokuapp.com/" style="display: block; width: 100%; text-decoration: none; padding: 5px; background-color: #696974; font-size: 22px; color: #FFF; text-align: center; border-radius: 10px; box-shadow: -3px -3px 0px 0px #105EFB; font-weight: 600;">登入</A>
 	</DIV>
-	<DIV style="padding: 30px 50px; color: #FFF; text-align: center;">
-		<DIV style="margin-right: 30px; display: inline-block;"><IMG src="./images/emailIconEmail.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></DIV>
-		<DIV style="margin-right: 30px; display: inline-block;"><IMG src="./images/emailIconLink.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">ILEARNED 官網</SPAN></DIV>
-		<DIV style="display: inline-block;"><IMG src="./images/emailIconFB.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">FB 粉絲團</SPAN></DIV>
+	<DIV style="padding: 30px 50px; text-align: center;">
+		<A href="mailto:ilearned2601@gmail.com" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconEmail.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></A>
+		<A href="https://ilearnedlearned.com/" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconLink.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">ILEARNED 官網</SPAN></A>
+		<A href="https://www.facebook.com/ilearnedlearned/" style="display: inline-block; color: #FFF;"><IMG src="./images/emailIconFB.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">FB 粉絲團</SPAN></A>
 	</DIV>
 </DIV>
 </BODY>
