--- a/email.html
+++ b/email.html
@@ -24,9 +24,9 @@
 		<A href="" style="display: block; width: 100%; text-decoration: none; padding: 5px; background-color: #696974; font-size: 22px; color: #FFF; text-align: center; border-radius: 10px; box-shadow: -3px -3px 0px 0px #105EFB; font-weight: 600;">帳號驗證</A>
 	</DIV>
 	<DIV style="padding: 30px 50px; text-align: center;">
-		<A href="mailto:ilearned2601@gmail.com" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconEmail.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></A>
-		<A href="https://ilearnedlearned.com/" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconLink.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">ILEARNED 官網</SPAN></A>
-		<A href="https://www.facebook.com/ilearnedlearned/" style="display: inline-block; color: #FFF;"><IMG src="./images/emailIconFB.svg" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">FB 粉絲團</SPAN></A>
+		<A href="mailto:ilearned2601@gmail.com" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconEmail.png" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">聯絡信箱</SPAN></A>
+		<A href="https://ilearnedlearned.com/" style="margin-right: 30px; display: inline-block; color: #FFF;"><IMG src="./images/emailIconLink.png" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">ILEARNED 官網</SPAN></A>
+		<A href="https://www.facebook.com/ilearnedlearned/" style="display: inline-block; color: #FFF;"><IMG src="./images/emailIconFB.png" style="width: 30px;" alt=""/><SPAN style="display: inline-block; transform: translateY(-45%); padding-left: 10px; font-size: 14px;">FB 粉絲團</SPAN></A>
 	</DIV>
 </DIV>
 </BODY>
